--- a/.github/workflows/play_store_deploy.yml
+++ b/.github/workflows/play_store_deploy.yml
@@ -1,83 +1,63 @@
 name: CI_PLAY_STORE_DEPLOY_ANDROID
 
 on:
-  # Run this workflow when any new code is pushed into the main branch
   push:
     branches: [main]
 
 jobs:
-  store_deploy_android:
-    if:  startsWith(github.head_ref, 'release/')
-    name: android store release
+  deployAndroid:
+    name: 🤖📦🚀 Build & deploy Android test release
     runs-on: ubuntu-latest
-    env:
-      # Setup env variables that will be used throughout the workflow
-      JAVA_VERSION: 12.0
-      FLUTTER_VERSION: 3.13.1
-      AAB_PATH: build/app/outputs/bundle/release/app-release.aab
-      KEYSTORE_PATH: android/upload-keystore.jks
-      KEY_PROPS_PATH: android/key.properties
-      SERVICE_ACCOUNT_PATH: store_credentials.json
     steps:
-      # Checkout repository codebase
-      - name: Checkout the code
+      - name: ⬇️ Checkout repository
         uses: actions/checkout@v3
-
-      # Setup Java in the VM
-      - name: Setup Java to compile the Android project
-        uses: actions/setup-java@v2
+      - name: ⚙️ Setup Java
+        uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
-          java-version: ${{ env.JAVA_VERSION }}
-      
-      # Setup Flutter in the VM
-      - name: Setup Flutter
+          java-version: '12.x'
+          cache: 'gradle'
+        id: java
+      - name: ⚙️ Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
-
-      # Decode Android env variables
-      - name: Decode Android keystore
-        run: echo "${{ secrets.ANDROID_KEYSTORE }}" | base64 --decode > ${{ env.KEYSTORE_PATH }}
-
-      - name: Decode Android key properties
-        run: echo "${{ secrets.ANDROID_KEY_PROPERTIES }}" | base64 --decode > ${{ env.KEY_PROPS_PATH }}
-
-      # Decode Android release Service Account
-      - name: Decode Android Service Account
-        run: echo "${{ secrets.PRODUCTION_CREDENTIAL_FILE }}" | base64 --decode > ${{ env.SERVICE_ACCOUNT_PATH }}
-
-      # Run flutter commands
-      - name: Run flutter pub get
-        run: flutter pub get
-
-      - name: 📦 Install dependencies
-        run: flutter pub get
-
-      - name: 🕵️ Analyze to check for bad Dart/Flutter practices
-        run: flutter analyze
-
-      - name: 📉 Run all app tests
-        run: flutter test
-
-      # Build Android Bundle release file
-      - name: Build aab
+          flutter-version: '3.7.0'
+          channel: 'stable'
+          cache: true
+        id: flutter
+      - name: 🔐 Retrieve base64 keystore and decode it to a file
+        env:
+          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_FILE_BASE64 }}
+        run: echo $KEYSTORE_BASE64 | base64 --decode > "${{ github.workspace }}/android-keystore.jks"
+      - name: 📝🔐 Create keystore.properties file
+        env:
+          KEYSTORE_PROPERTIES_PATH: ${{ github.workspace }}/app/android/keystore.properties
         run: |
-          flutter build appbundle 
-          --release
-
-      # Upload generated aab to project artifacts
-      - name: Upload generated aab to the artifacts
-        uses: actions/upload-artifact@master
+          echo '${{ inputs.flavor }}StoreFile=${{ github.workspace }}/android-keystore.jks' > $KEYSTORE_PROPERTIES_PATH
+          echo '${{ inputs.flavor }}KeyAlias=${{ secrets.KEYSTORE_KEY_ALIAS }}' >> $KEYSTORE_PROPERTIES_PATH
+          echo '${{ inputs.flavor }}StorePassword=${{ secrets.KEYSTORE_PASSWORD }}' >> $KEYSTORE_PROPERTIES_PATH
+          echo '${{ inputs.flavor }}KeyPassword=${{ secrets.KEYSTORE_KEY_PASSWORD }}' >> $KEYSTORE_PROPERTIES_PATH
+      - name: 📝 Edit pubspec version
+        run: |
+          sed -Ei "s/^version: (.*)/version: ${{ inputs.new-pubspec-version }}/" app/pubspec.yaml
+      - name: ⚙️ Setup Melos
+        uses: bluefireteam/melos-action@v2
+      - name: ⚙️ Install dependencies for all packages
+        run: melos build:pub_get:all
+      - name: 🤖📦 Create Android ${{ inputs.short-environment-name }} appbundle release
+        run: |
+          pushd app
+          mkdir debug-symbols
+          flutter build appbundle \
+            --release \
+            --flavor ${{ inputs.flavor }} \
+            --target lib/main_${{ inputs.flavor }}.dart
+          popd
+      - name: 🤖🚀 Upload Android ${{ inputs.short-environment-name }} Release to Play Store
+        uses: r0adkll/upload-google-play@v1.0.19
         with:
-          name: aab-stores
-          path: {{ env.AAB_PATH }}
-
-      # Deploy bundle to Google Play internal testing
-      - name: Deploy to Play Store (Internal testing)
-        uses: r0adkll/upload-google-play@v1
-        with:
-          serviceAccountJson: {{ env.SERVICE_ACCOUNT_PATH }}
-          packageName: com.yourapp.package
-          releaseFiles: {{ env.AAB_PATH }}
+          packageName: ${{ inputs.package-name }}
           track: internal
+          status: ${{ inputs.release-status }}
+          releaseFiles: ${{ github.workspace }}/app/build/app/outputs/bundle/${{ inputs.flavor }}Release/app-${{ inputs.flavor }}-release.aab
+          serviceAccountJsonPlainText: '${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT_KEY_JSON }}'
