--- a/.github/workflows/play_store_deploy.yml
+++ b/.github/workflows/play_store_deploy.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - name: ⬇️ Checkout repository
         uses: actions/checkout@v3
+
       - name: ⚙️ Setup Java
         uses: actions/setup-java@v3
         with:
@@ -18,6 +19,7 @@ jobs:
           java-version: '12.x'
           cache: 'gradle'
         id: java
+
       - name: ⚙️ Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -25,39 +27,46 @@ jobs:
           channel: 'stable'
           cache: true
         id: flutter
+
       - name: 🔐 Retrieve base64 keystore and decode it to a file
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_FILE_BASE64 }}
         run: echo $KEYSTORE_BASE64 | base64 --decode > "${{ github.workspace }}/android-keystore.jks"
+
       - name: 📝🔐 Create keystore.properties file
         env:
           KEYSTORE_PROPERTIES_PATH: ${{ github.workspace }}/app/android/keystore.properties
         run: |
-          echo '${{ inputs.flavor }}StoreFile=${{ github.workspace }}/android-keystore.jks' > $KEYSTORE_PROPERTIES_PATH
-          echo '${{ inputs.flavor }}KeyAlias=${{ secrets.KEYSTORE_KEY_ALIAS }}' >> $KEYSTORE_PROPERTIES_PATH
-          echo '${{ inputs.flavor }}StorePassword=${{ secrets.KEYSTORE_PASSWORD }}' >> $KEYSTORE_PROPERTIES_PATH
-          echo '${{ inputs.flavor }}KeyPassword=${{ secrets.KEYSTORE_KEY_PASSWORD }}' >> $KEYSTORE_PROPERTIES_PATH
+          echo 'devStoreFile=${{ github.workspace }}/android-keystore.jks' > $KEYSTORE_PROPERTIES_PATH
+          echo 'devKeyAlias=${{ secrets.KEYSTORE_KEY_ALIAS }}' >> $KEYSTORE_PROPERTIES_PATH
+          echo 'devStorePassword=${{ secrets.KEYSTORE_PASSWORD }}' >> $KEYSTORE_PROPERTIES_PATH
+          echo 'devKeyPassword=${{ secrets.KEYSTORE_KEY_PASSWORD }}' >> $KEYSTORE_PROPERTIES_PATH
+
       - name: 📝 Edit pubspec version
         run: |
           sed -Ei "s/^version: (.*)/version: ${{ inputs.new-pubspec-version }}/" app/pubspec.yaml
+
       - name: ⚙️ Setup Melos
         uses: bluefireteam/melos-action@v2
+
       - name: ⚙️ Install dependencies for all packages
         run: melos build:pub_get:all
+
       - name: 🤖📦 Create Android ${{ inputs.short-environment-name }} appbundle release
         run: |
           pushd app
           mkdir debug-symbols
           flutter build appbundle \
             --release \
-            --flavor ${{ inputs.flavor }} \
-            --target lib/main_${{ inputs.flavor }}.dart
+            --flavor dev \
+            --target lib/main.dart
           popd
+
       - name: 🤖🚀 Upload Android ${{ inputs.short-environment-name }} Release to Play Store
         uses: r0adkll/upload-google-play@v1.0.19
         with:
           packageName: ${{ inputs.package-name }}
           track: internal
           status: ${{ inputs.release-status }}
-          releaseFiles: ${{ github.workspace }}/app/build/app/outputs/bundle/${{ inputs.flavor }}Release/app-${{ inputs.flavor }}-release.aab
+          releaseFiles: ${{ github.workspace }}/app/build/app/outputs/bundle/devRelease/app-dev-release.aab
           serviceAccountJsonPlainText: '${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT_KEY_JSON }}'
