--- a/.github/workflows/play_store_deploy.yml
+++ b/.github/workflows/play_store_deploy.yml
@@ -34,7 +34,7 @@ jobs:
         run: echo $KEYSTORE_BASE64 | base64 --decode > "${{ github.workspace }}/android-keystore.jks"
 
       - name: testes
-        run: echo "version=1.0" > ${{ github.workspace }}/app/android/key.properties
+        run: ls
 
       - name: 📝🔐 Create keystore.properties file
         env:
