--- a/.github/workflows/play_store_deploy.yml
+++ b/.github/workflows/play_store_deploy.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: ⚙️ Setup Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '12.x'
@@ -23,7 +23,7 @@ jobs:
       - name: ⚙️ Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.7.0'
+          flutter-version: '3.19.0'
           channel: 'stable'
           cache: true
         id: flutter
@@ -34,7 +34,9 @@ jobs:
         run: echo $KEYSTORE_BASE64 | base64 --decode > "${{ github.workspace }}/android-keystore.jks"
 
       - name: testes
-        run: ls "${{ github.workspace }}/app/android/"
+        run: |
+          ls
+          ls "${{ github.workspace }}/app/android/"
 
       - name: 📝🔐 Create keystore.properties file
         env:
