--- a/.github/workflows/play_store_deploy.yml
+++ b/.github/workflows/play_store_deploy.yml
@@ -33,14 +33,9 @@ jobs:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_FILE_BASE64 }}
         run: echo $KEYSTORE_BASE64 | base64 --decode > "${{ github.workspace }}/android-keystore.jks"
 
-      - name: testes
-        run: |
-          ls
-          ls "${{ github.workspace }}/app/android/"
-
       - name: 📝🔐 Create keystore.properties file
         env:
-          KEYSTORE_PROPERTIES_PATH: ${{ github.workspace }}/app/android/key.properties
+          KEYSTORE_PROPERTIES_PATH: ${{ github.workspace }}/android/app/key.properties
         run: |
           echo 'storeFile=${{ github.workspace }}/android-keystore.jks' > $KEYSTORE_PROPERTIES_PATH
           echo 'keyAlias=${{ secrets.KEYSTORE_KEY_ALIAS }}' >> $KEYSTORE_PROPERTIES_PATH
