--- a/.github/workflows/play_store_deploy.yml
+++ b/.github/workflows/play_store_deploy.yml
@@ -42,11 +42,8 @@ jobs:
           echo 'storePassword=${{ secrets.KEYSTORE_PASSWORD }}' >> $KEYSTORE_PROPERTIES_PATH
           echo 'keyPassword=${{ secrets.KEYSTORE_KEY_PASSWORD }}' >> $KEYSTORE_PROPERTIES_PATH
 
-      - name: ⚙️ Install dependencies for all packages
-        run: flutter pub get
-
       - name: 🤖📦 Create Android Tests appbundle release
-        run: flutter build appbundle
+        run: flutter pub get && flutter build appbundle
 
       - name: 🤖🚀 Upload Android Tests Release to Play Store
         uses: r0adkll/upload-google-play@v1.0.19
