--- a/.github/workflows/play_store_deploy.yml
+++ b/.github/workflows/play_store_deploy.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   deployAndroid:
-    name: 🤖📦🚀 Build & deploy Android test release
+    name: Build & deploy
     runs-on: ubuntu-latest
     steps:
       - name: ⬇️ Checkout repository
@@ -46,7 +46,7 @@ jobs:
         run: flutter pub get && flutter build appbundle
 
       - name: 🤖🚀 Upload Android Tests Release to Play Store
-        uses: r0adkll/upload-google-play@v1.0.19
+        uses: r0adkll/upload-google-play@v1.1.3
         with:
           packageName: dev.bernardoamaral.budgetPlanner
           track: qa
