--- a/.github/workflows/play_store_deploy.yml
+++ b/.github/workflows/play_store_deploy.yml
@@ -46,14 +46,8 @@ jobs:
           echo 'keyAlias=${{ secrets.KEYSTORE_KEY_ALIAS }}' >> $KEYSTORE_PROPERTIES_PATH
           echo 'storeFile=${{ github.workspace }}/android-keystore.jks' >> $KEYSTORE_PROPERTIES_PATH
 
-      - name: Debug Secrets
-        run: |
-          echo "KEYSTORE_KEY_ALIAS=${{ secrets.KEYSTORE_KEY_ALIAS }}"
-          echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}"
-          echo "KEYSTORE_KEY_PASSWORD=${{ secrets.KEYSTORE_KEY_PASSWORD }}"
-
-      - name: test
-        run: cat ${{ github.workspace }}/android/app/key.properties
+      - name: Debug Keystore
+        run: ls -l ${{ github.workspace }}/android-keystore.jks
 
       - name: Build appBundle
         run: flutter build appbundle --release --no-tree-shake-icons
