--- a/.github/workflows/play_store_deploy.yml
+++ b/.github/workflows/play_store_deploy.yml
@@ -46,8 +46,8 @@ jobs:
           echo 'keyAlias=${{ secrets.KEYSTORE_KEY_ALIAS }}' >> $KEYSTORE_PROPERTIES_PATH
           echo 'storeFile=${{ github.workspace }}/android-keystore.jks' >> $KEYSTORE_PROPERTIES_PATH
 
-      - name: Debug Keystore
-        run: ls -l ${{ github.workspace }}/android-keystore.jks
+      - name: Flutter doctor
+        run: flutter doctor -v
 
       - name: Build appBundle
         run: flutter build appbundle --release --no-tree-shake-icons
