--- a/.github/workflows/play_store_deploy.yml
+++ b/.github/workflows/play_store_deploy.yml
@@ -20,7 +20,7 @@ jobs:
           cache: 'gradle'
         id: java
 
-      - name: ⚙️ Setup Flutter
+      - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.27.3'
@@ -35,7 +35,7 @@ jobs:
       - name: Retrieve base64 keystore
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_FILE_BASE64 }}
-        run: echo $KEYSTORE_BASE64 | base64 --decode > "${{ github.workspace }}/android-keystore.jks"
+        run: echo $KEYSTORE_BASE64 | base64 --decode > "${{ github.workspace }}/android/app/keystore.jks"
 
       - name: Create key.properties file
         env:
@@ -44,7 +44,7 @@ jobs:
           echo 'storePassword=${{ secrets.KEYSTORE_PASSWORD }}' >> $KEYSTORE_PROPERTIES_PATH
           echo 'keyPassword=${{ secrets.KEYSTORE_KEY_PASSWORD }}' >> $KEYSTORE_PROPERTIES_PATH
           echo 'keyAlias=${{ secrets.KEYSTORE_KEY_ALIAS }}' >> $KEYSTORE_PROPERTIES_PATH
-          echo 'storeFile=${{ github.workspace }}/android-keystore.jks' >> $KEYSTORE_PROPERTIES_PATH
+          echo 'storeFile=${{ github.workspace }}/android/app/keystore.jks' >> $KEYSTORE_PROPERTIES_PATH
 
       - name: Doctor
         run: flutter doctor -v
