--- a/.github/workflows/play_store_deploy.yml
+++ b/.github/workflows/play_store_deploy.yml
@@ -12,25 +12,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: ⚙️ Setup Java
+      - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: 'oracle'
           java-version: '17'
           cache: 'gradle'
         id: java
-
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.27.3'
-          channel: 'stable'
-          cache: true
-        id: flutter
-
-        #4 Install Dependencies
-      - name: Install Dependencies
-        run: flutter pub get
 
       - name: Retrieve base64 keystore
         env:
@@ -46,11 +34,19 @@ jobs:
           echo 'keyAlias=${{ secrets.KEYSTORE_KEY_ALIAS }}' >> $KEYSTORE_PROPERTIES_PATH
           echo 'storeFile=${{ github.workspace }}/android/app/keystore.jks' >> $KEYSTORE_PROPERTIES_PATH
 
-      - name: Doctor
-        run: flutter doctor -v
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.27.3'
+          channel: 'stable'
+          cache: true
+        id: flutter
+
+      - name: Install Dependencies
+        run: flutter pub get
 
       - name: Build appBundle
-        run: flutter build appbundle --no-tree-shake-icons --release --no-shrink -v
+        run: flutter build appbundle --no-tree-shake-icons --release
 
       - name: Upload Android Tests Release to Play Store
         uses: r0adkll/upload-google-play@v1.1.3
