add build with verbose

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -9,6 +9,8 @@ def keystoreProperties = new Properties()
 def keystorePropertiesFile = rootProject.file('key.properties')
 if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
+     project.logger.lifecycle('key.properties OKOKOKOKO!!')
 } else {
     project.logger.lifecycle('key.properties not found!!!')
 }
