--- a/.github/workflows/play_store_deploy.yml
+++ b/.github/workflows/play_store_deploy.yml
@@ -42,6 +42,9 @@ jobs:
           cache: true
         id: flutter
 
+      - name: Accept licenses
+        run: flutter doctor --android-licenses
+
       - name: Install Dependencies
         run: flutter pub get
 
