--- a/.github/workflows/play_store_deploy.yml
+++ b/.github/workflows/play_store_deploy.yml
@@ -18,7 +18,9 @@ jobs:
           distribution: 'oracle'
           java-version: '17'
           cache: 'gradle'
-        id: java
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
       - name: Retrieve base64 keystore
         env:
