--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
 
   dropdown_search: ^6.0.2
   logger: ^2.6.1
+  intl: ^0.20.2
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
